--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "homepage": "https://github.com/mauriziocescon",
   "private": false,
   "engines": {
-    "node": ">=10.16.3",
-    "npm": ">=6.9.0"
+    "node": ">=20.9.0",
+    "npm": ">=10.1.0"
   },
   "scripts": {
     "postinstall": "npm run build",
@@ -47,57 +47,57 @@
   ],
   "dependencies": {
     "@babel/polyfill": "7.12.1",
-    "@fortawesome/fontawesome-free": "6.1.1",
-    "@popperjs/core": "2.11.5",
-    "bootstrap": "5.1.3",
-    "d3": "7.4.4",
-    "jquery": "3.6.0",
+    "@fortawesome/fontawesome-free": "6.4.2",
+    "@popperjs/core": "2.11.8",
+    "bootstrap": "5.3.2",
+    "d3": "7.8.5",
+    "jquery": "3.7.1",
     "roboto-fontface": "0.10.0"
   },
   "devDependencies": {
-    "@babel/core": "7.18.2",
-    "@babel/preset-env": "7.18.2",
-    "@types/bootstrap": "5.1.12",
-    "@types/d3": "7.4.0",
-    "@types/faker": "6.6.9",
-    "@types/jest": "27.5.1",
-    "@types/jquery": "3.5.14",
-    "@types/node": "17.0.36",
-    "@types/webpack": "5.28.0",
-    "babel-jest": "28.1.0",
-    "babel-loader": "8.2.5",
-    "clean-webpack-plugin": "4.0.0",
-    "copy-webpack-plugin": "11.0.0",
-    "cross-env": "7.0.3",
-    "css-loader": "6.7.1",
-    "expose-loader": "4.0.0",
-    "faker": "5.5.3",
-    "file-loader": "6.2.0",
-    "html-loader": "3.1.0",
-    "html-webpack-plugin": "5.5.0",
-    "jest": "28.1.0",
-    "jest-css-modules": "2.1.0",
-    "json-server": "0.17.0",
-    "mini-css-extract-plugin": "2.6.0",
-    "nodemon": "2.0.16",
-    "resolve-url-loader": "5.0.0",
-    "sass": "1.52.1",
-    "sass-loader": "13.0.0",
-    "sass-resources-loader": "2.2.5",
-    "source-map-loader": "3.0.1",
-    "style-loader": "3.3.1",
-    "stylelint": "14.8.5",
-    "stylelint-config-standard-scss": "4.0.0",
-    "stylelint-webpack-plugin": "3.3.0",
-    "ts-jest": "28.0.3",
-    "ts-loader": "9.3.0",
-    "tslint": "6.1.3",
-    "tslint-loader": "3.5.4",
-    "typescript": "4.7.2",
-    "webpack": "5.72.1",
-    "webpack-bundle-analyzer": "4.5.0",
-    "webpack-cli": "4.9.2",
-    "webpack-dev-server": "4.9.0",
-    "webpack-merge": "5.8.0"
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "@types/bootstrap": "^5.2.9",
+    "@types/d3": "^7.4.3",
+    "@types/faker": "^6.6.9",
+    "@types/jest": "^29.5.8",
+    "@types/jquery": "^3.5.27",
+    "@types/node": "^20.9.0",
+    "@types/webpack": "^5.28.5",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.8.1",
+    "expose-loader": "^4.1.0",
+    "faker": "^5.5.3",
+    "file-loader": "^6.2.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
+    "jest-css-modules": "^2.1.0",
+    "json-server": "^0.17.4",
+    "mini-css-extract-plugin": "^2.7.6",
+    "nodemon": "^3.0.1",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "sass-resources-loader": "^2.2.5",
+    "source-map-loader": "^4.0.1",
+    "style-loader": "^3.3.3",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "stylelint-webpack-plugin": "^4.1.1",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.5.0",
+    "tslint": "^6.1.3",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^5.2.2",
+    "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.9.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   }
 }
